--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,13 @@
-.h1 Vim configuration
 
 To install, use:
 
 <pre>
-git clone git://github.com/rufiao/vim.git .vim && cd .vim && git submodule init && git submodule update && cd .. && ln -s .vim/vimrc .vimrc
+git clone git://github.com/rufiao/vim.git .vim && cd .vim && git submodule init && git submodule update && cd bundle/command-t && rake make && cd ../../.. && ln -s .vim/vimrc .vimrc
 </pre>
+
+To have python support in syntastic:
+
+<pre>
+sudo pip install pyflakes
+</pre>
+
