--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@
 To install, use:
 
 <pre>
-git clone git://github.com/rufiao/vim.git .vim && cd .vim && git submodule init && git submodule update && cd bundle/command-t && rake make && cd ../../.. && ln -s .vim/vimrc .vimrc
+git clone git://github.com/rufiao/vim.git .vim && (cd .vim && ./bundles.sh) && ln -s .vim/vimrc .vimrc
 </pre>
 
 To have python support in syntastic:
