--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,6 @@
 To install, use:
 
 <pre>
-git clone git@github.com:rufiao/vim.git .vim && (cd .vim && ./bundles.sh) && ln -s .vim/vimrc .vimrc
+git clone git@github.com:rufiao/vim.git .vim && (cd .vim && ./bundles.sh && ./colors.sh) && ln -s .vim/vimrc .vimrc
 </pre>
 
